js/src/tests/test262/built-ins/NativeErrors/TypeError/instance-proto.js
assert
.
sameValue
(
Object
.
getPrototypeOf
(
new
TypeError
)
TypeError
.
prototype
)
;
reportCompare
(
0
0
)
;
